--- a/application-search-service.properties
+++ b/application-search-service.properties
@@ -8,7 +8,7 @@ spring.datasource.url = jdbc:mysql://localhost/ems
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = sanskar@123
+spring.datasource.password = 1234
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.platform=mysql
